--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    
-
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="thunderbolt-container">
+      <img src="assets/Mask group.svg" alt="thunderbolt" />
+    </div>
+    <div class="navbar">
+        <div class="logo-div">
+            <img src="assets/Logo.svg" alt="logo">
+        </div>
+        <div class="tabs-div">
+            <a class="navbar-tab" href="#">Home</a>
+            <a class="navbar-tab" href="#">About</a>
+            <a class="navbar-tab" href="#">How it Works</a>
+            <a class="navbar-tab" href="#">services</a>
+        </div>
+        <div class="log-div">
+            <span>Sign In</span>
+            <button class="signup-btn">Sign Up</button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
