--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <button class="signup-btn">Sign Up</button>
         </div>
     </div>
+    <div class="banner-div">
+        <p>Awesome UI Dark Template for Webflow Agency</p>
+        <button>Get in Touch</button>
+    </div>
 
     <script src="script.js"></script>
   </body>
