info section complete

--- a/index.html
+++ b/index.html
@@ -25,9 +25,77 @@
             <button class="signup-btn">Sign Up</button>
         </div>
     </div>
+    <div class="banner-div-container">
     <div class="banner-div">
         <p>Awesome UI Dark Template for Webflow Agency</p>
         <button>Get in Touch</button>
+    </div>
+</div>
+    <div class="info-div">
+        <p>What We do</p>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-img-div">
+
+                    <img src="assets/Frame.svg" alt="">
+                </div>
+                <p class="card-heading">Web Design</p>
+                <p class="card-text">From concept to launch, we create stunning, user-centric websites that elevate your brand and engage your audience.</p>
+            </div>
+            <div class="card">
+                <div class="card-img-div">
+
+                    <img src="assets/Frame (1).svg" alt="">
+                </div>
+                <p class="card-heading">UI/UX Design</p>
+                <p class="card-text">From concept to launch, we create stunning, user-centric websites that elevate your brand and engage your audience.</p>
+            </div>
+            <div class="card">
+                <div class="card-img-div">
+
+                    <img src="assets/Frame (3).svg" alt="">
+                </div>
+                <p class="card-heading">Responsive Design</p>
+                <p class="card-text">From concept to launch, we create stunning, user-centric websites that elevate your brand and engage your audience.</p>
+            </div>
+            <div class="card two-rows">
+                <div>
+                <div class="card-img-div">
+
+                    <img src="assets/Frame (2).svg" alt="">
+                </div>
+                <p class="card-heading">E-commerce Solutions:</p>
+                <p class="card-text">From concept to launch, we create stunning, user-centric websites that elevate your brand and engage your audience.</p>
+            </div>
+            <div class="card-img">
+                <img src="assets/Rectangle 44.svg" alt="">
+            </div>
+            </div>
+            <div class="card two-cols">
+                <div>
+
+                
+                <div class="card-img-div">
+
+                    <img src="assets/Group 27170.svg" alt="">
+                </div>
+                <p class="card-heading">Webflow</p>
+                <p class="card-text">From concept to launch, we create stunning, user-centric websites that elevate your brand and engage your audience.</p>
+            </div>
+                <div class="blue-rectangle">
+                    <img src="assets//Vector.svg" alt="">
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img-div">
+
+                    
+                    <img src="assets/Frame (4).svg" alt="">
+                </div>
+                <p class="card-heading">Custom Development</p>
+                <p class="card-text">From concept to launch, we create stunning, user-centric websites that elevate your brand and engage your audience.</p>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
