work section completed

--- a/index.html
+++ b/index.html
@@ -97,6 +97,44 @@
             </div>
         </div>
     </div>
+    <div class="work-div">
+        <div id="background-img">
+            <img src="assets/Untitled@3-1536x735 1.svg" alt="flower">
+        </div>
+        <div class="work-top-div">
+            <div>
+                <div>
+
+               
+                <img src="assets/Frame (5).svg" alt="">
+                <!-- <img src="assets/Ellipse 1.svg" alt=""> -->
+            </div>
+            </div>
+            <div>
+                <p id="demo">check our Work</p>
+                <p>Take a look at some of our recent projects to see how we've helped businesses like yours succeed online.</p>
+            </div>
+            <div>
+                <div>
+
+               
+                <img src="assets/Frame (6).svg" alt="">
+                <!-- <img src="assets/Ellipse 1.svg" alt=""> -->
+            </div>
+            </div>
+        </div>
+        <div class="work-bottom-div">
+            <div>
+                <img src="assets/Rectangle 35.svg" alt="">
+            </div>
+            <div>
+                <img src="assets/Rectangle 30.svg" alt="">
+            </div>
+            <div>
+                <img src="assets/Rectangle 33.svg" alt="">
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
