pricing section done

--- a/index.html
+++ b/index.html
@@ -135,7 +135,77 @@
             </div>
         </div>
     </div>
+    <div class="review-div">
+        <div class="inner-div">
+            <div>
+                <img src="assets/Group 13679.svg" alt="">
+            </div>
+            <div>
+                <span class="review-bold-text">5.0 <span class="review-faint-text">Based on </span>145 <span class="review-faint-text">Reviews</span></span>
+                <img src="assets/Group 13681.svg" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="pricing-div">
+        <div class="pricing-container">
 
+        
+        <div class="pricing-left">
+            <div class="left-upper">
+                <p>Pricing</p>
+                <p>Take a look at some of our recent projects to see how we've helped businesses like yours succeed online.</p>
+            </div>
+            <div class="left-lower">
+                <p>Let's Schedule a Meeting</p>
+                <button>Schedule Meeting</button>
+            </div>
+        </div>
+        <div class="pricing-right">
+            <div class="right-upper">
+                <p>Unlimited Services</p>
+                <p>Take a look at some of our recent projects to see how we've helped businesses like yours succeed online.</p>
+            </div>
+            <div class="right-middle">
+                <div>
+                    <div>
+                        <img src="assets/Vector (1).svg" alt="">
+                        <p>Unlimited requests</p>
+                    </div>
+                    <div>
+                        <img src="assets/Vector (1).svg" alt="">
+                        <p>Unlimited requests</p>
+                    </div>
+                    <div>
+                        <img src="assets/Vector (1).svg" alt="">
+                        <p>Unlimited requests</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="assets/Vector (1).svg" alt="">
+                        <p>Unlimited requests</p>
+                    </div>
+                    <div>
+                        <img src="assets/Vector (1).svg" alt="">
+                        <p>Unlimited requests</p>
+                    </div>
+                    <div>
+                        <img src="assets/Vector (1).svg" alt="">
+                        <p>Unlimited requests</p>
+                    </div>
+                </div>
+            </div>
+            <div class="right-lower">
+                <div>
+                    <span class="bold">$3,250 <span class="faint">/mo</span></span>
+                </div>
+                <div>
+                    <img src="assets/Frame (6).svg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
