questions section completed

--- a/index.html
+++ b/index.html
@@ -206,6 +206,78 @@
         </div>
     </div>
     </div>
+    <div class="spring">
+        <img src="assets/Untitled@2-1536x735 1.svg" alt="">
+    </div>
+    <div class="questions-div">
+        <div>
+        <div class="left-que">
+            <p>Frequently Asked Questions</p>
+        </div>
+        <div class="right-que">
+            <div class= "view-answer">
+                <div class="question">
+                    <p>How can I contact Inkyy Team?</p>
+                    <div>
+                        <img src="assets/Frame (8).svg" alt="" class="plus">
+                        <img src="assets/Frame (7).svg" alt="" class="minus">
+                    </div>
+                </div>
+                <div class="answer">
+                    <p>You can reach us through our contact form on our website or by emailing us at <a href="mailto:hello@inkyy.com"><span>hello@inkyy.com</span></a> We typically respond within 24 hours.</p>
+                </div>
+            </div>
+            <div class= "view-answer">
+                <div class="question">
+                    <p>How can I contact Inkyy Team?</p>
+                    <div>
+                        <img src="assets/Frame (8).svg" alt="" class="plus">
+                        <img src="assets/Frame (7).svg" alt="" class="minus">
+                    </div>
+                </div>
+                <div class="answer">
+                     <p>You can reach us through our contact form on our website or by emailing us at <a href="mailto:hello@inkyy.com"><span>hello@inkyy.com</span></a> We typically respond within 24 hours.</p>
+                </div>
+            </div>
+            <div class= "view-answer">
+                <div class="question">
+                    <p>How can I contact Inkyy Team?</p>
+                    <div>
+                        <img src="assets/Frame (8).svg" alt="" class="plus">
+                        <img src="assets/Frame (7).svg" alt="" class="minus">
+                    </div>
+                </div>
+                <div class="answer">
+                     <p>You can reach us through our contact form on our website or by emailing us at <a href="mailto:hello@inkyy.com"><span>hello@inkyy.com</span></a> We typically respond within 24 hours.</p>
+                </div>
+            </div>
+            <div class= "view-answer">
+                <div class="question">
+                    <p>How can I contact Inkyy Team?</p>
+                    <div>
+                        <img src="assets/Frame (8).svg" alt="" class="plus">
+                        <img src="assets/Frame (7).svg" alt="" class="minus">
+                    </div>
+                </div>
+                <div class="answer">
+                     <p>You can reach us through our contact form on our website or by emailing us at <a href="mailto:hello@inkyy.com"><span>hello@inkyy.com</span></a> We typically respond within 24 hours.</p>
+                </div>
+            </div>
+            <div class= "view-answer">
+                <div class="question">
+                    <p>How can I contact Inkyy Team?</p>
+                    <div>
+                        <img src="assets/Frame (8).svg" alt="" class="plus">
+                        <img src="assets/Frame (7).svg" alt="" class="minus">
+                    </div>
+                </div>
+                <div class="answer">
+                     <p>You can reach us through our contact form on our website or by emailing us at <a href="mailto:hello@inkyy.com"><span>hello@inkyy.com</span></a> We typically respond within 24 hours.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
